--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -181,4 +181,6 @@
     <string name="scan_code">Skanuj kod</string>
     <string name="or_use_already_used_code">Lub użyj już używanego kodu</string>
     <string name="click_to_choose">*Kliknij by wybrać*</string>
+    <string name="_1_hour_lock">Blokada 1 godziny</string>
+    <string name="_1_hour_lock_description">Alarm nie może być anulowany bez kodu, jeśli jest za mniej niż 1 godzinę.</string>
 </resources>
