--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -165,4 +165,6 @@
     <string name="click_to_choose">*点击以选择*</string>
     <string name="_1_hour_lock">1 小时锁</string>
     <string name="_1_hour_lock_description">如果不到 1 小时，警报不能在没有密码的情况下取消。</string>
+    <string name="power_off_guard">关机保护</string>
+    <string name="power_off_guard_description">当闹钟响起时，不要让自己关掉手机。</string>
 </resources>
