--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -171,4 +171,6 @@
     <string name="click_to_choose">*Zum Auswählen anklicken*</string>
     <string name="_1_hour_lock">1 Stunde Sperre</string>
     <string name="_1_hour_lock_description">Der Alarm kann nicht ohne Code abgebrochen werden, wenn er in weniger als 1 Stunde erfolgt.</string>
+    <string name="power_off_guard">Abschaltschutz</string>
+    <string name="power_off_guard_description">Schalten Sie Ihr Telefon nicht aus, wenn der Wecker klingelt.</string>
 </resources>
