--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -177,4 +177,6 @@
     <string name="click_to_choose">*Clicca per scegliere*</string>
     <string name="_1_hour_lock">Blocco di 1 ora</string>
     <string name="_1_hour_lock_description">L\'allarme non può essere annullato senza codice se si verifica in meno di un\'ora.</string>
+    <string name="power_off_guard">Protezione spegnimento</string>
+    <string name="power_off_guard_description">Non lasciatevi spegnere il telefono quando suona la sveglia.</string>
 </resources>
