--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -176,4 +176,6 @@
     <string name="click_to_choose">*Click to choose*</string>
     <string name="_1_hour_lock">1 hour lock</string>
     <string name="_1_hour_lock_description">Alarm can\'t be canceled without code if it is in less than 1 hour.</string>
+    <string name="power_off_guard">Power-off guard</string>
+    <string name="power_off_guard_description">Do not let yourself turn off your phone when the alarm is ringing.</string>
 </resources>
