--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -173,4 +173,6 @@
     <string name="_1_hour_lock_description">Der Alarm kann nicht ohne Code abgebrochen werden, wenn er in weniger als 1 Stunde erfolgt.</string>
     <string name="power_off_guard">Abschaltschutz</string>
     <string name="power_off_guard_description">Schalten Sie Ihr Telefon nicht aus, wenn der Wecker klingelt.</string>
+    <string name="lock_alarm_to_this_volume">Stellen Sie den Alarm auf diese Lautstärke ein, wenn er klingelt:</string>
+    <string name="using_system_alarm_volume">Verwendung der Systemalarmlautstärke</string>
 </resources>
