--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -167,4 +167,6 @@
     <string name="_1_hour_lock_description">开启后，若本闹钟距离响铃不足一小时，则只能通过扫码提前关闭。</string>
     <string name="power_off_guard">关机保护</string>
     <string name="power_off_guard_description">当闹钟响起时，不要让自己关掉手机。</string>
+    <string name="lock_alarm_to_this_volume">设置闹钟响起时的音量：</string>
+    <string name="using_system_alarm_volume">使用系统警报音量</string>
 </resources>
