--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -181,4 +181,5 @@
     <string name="power_off_guard_description">No te permitas apagar el teléfono cuando suene la alarma.</string>
     <string name="lock_alarm_to_this_volume">Ajuste la alarma a este volumen cuando suene:</string>
     <string name="using_system_alarm_volume">Uso del volumen de alarma del sistema</string>
+    <string name="advanced_settings">Configuración avanzada</string>
 </resources>
