--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -187,4 +187,5 @@
     <string name="power_off_guard_description">Nie pozwól sobie na wyłączenie telefonu, gdy dzwoni alarm.</string>
     <string name="lock_alarm_to_this_volume">Ustaw głośność alarmu, gdy dzwoni:</string>
     <string name="using_system_alarm_volume">Korzystanie z głośności alarmu systemowego</string>
+    <string name="advanced_settings">Ustawienia zaawansowane</string>
 </resources>
