Added the warning when scanning the wrong code on the DisableAlarmScannerScreen

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -174,4 +174,5 @@
     <string name="lock_alarm_to_this_volume">Stellen Sie den Alarm auf diese Lautstärke ein, wenn er klingelt:</string>
     <string name="using_system_alarm_volume">Verwendung der Systemalarmlautstärke</string>
     <string name="advanced_settings">Erweiterte Einstellungen</string>
+    <string name="incorrect_code_scanned">Falscher Code gescannt!</string>
 </resources>
