--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -186,4 +186,5 @@
     <string name="lock_alarm_to_this_volume">Налаштуйте гучність будильника, коли він лунає:</string>
     <string name="using_system_alarm_volume">Використання гучності сигналу будильника</string>
     <string name="advanced_settings">Розширені налаштування</string>
+    <string name="incorrect_code_scanned">Відскановано невірний код!</string>
 </resources>
