--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -180,4 +180,5 @@
     <string name="lock_alarm_to_this_volume">Impostare la sveglia su questo volume quando suona:</string>
     <string name="using_system_alarm_volume">Utilizzo del volume degli allarmi di sistema</string>
     <string name="advanced_settings">Impostazioni avanzate</string>
+    <string name="incorrect_code_scanned">Codice errato scansionato!</string>
 </resources>
