--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -179,4 +179,5 @@
     <string name="lock_alarm_to_this_volume">Set the alarm to this volume when it rings:</string>
     <string name="using_system_alarm_volume">Using system alarm volume</string>
     <string name="advanced_settings">Advanced settings</string>
+    <string name="incorrect_code_scanned">Incorrect code scanned!</string>
 </resources>
