German Translation fixes

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -36,8 +36,8 @@
     <string name="get_up_catchphrase_description">QRAlarm stellt sicher, dass Sie nicht nur aufgewacht sind, sondern auch aufgestanden sind und den Alarm deaktiviert haben.</string>
     <string name="rise_up_catchphrase">Erhebt euch!</string>
     <string name="rise_up_catchphrase_description">Scannen Sie den Code, deaktivieren Sie den Alarm und verabschieden Sie sich vom Verschlafen! Genießen Sie Ihren Morgen mit QRAlarm!</string>
-    <string name="lets_go">Lass uns gehen!</string>
-    <string name="home">Heim</string>
+    <string name="lets_go">Lass uns loslegen!</string>
+    <string name="home">Übersicht</string>
     <string name="alarms">Alarm</string>
     <string name="alarm">Alarm</string>
     <string name="repeating">Wiederholen</string>
@@ -53,8 +53,8 @@
     <string name="gentle_wake_up_description">Die Alarmlautstärke wird für die angegebene Zeit erhöht.</string>
     <string name="temporary_mute_description">Bei Verwendung eines QR/Barcodes wird der Alarm nach dem Klicken auf STOP für die angegebene Zeit stummgeschaltet.</string>
     <string name="only_once">Nur einmal</string>
-    <string name="custom">Brauch</string>
-    <string name="number_of_snoozes">Anzahl der Schlummervorgänge:</string>
+    <string name="custom">Benutzerdefiniert</string>
+    <string name="number_of_snoozes">Anzahl der Schlummerwiederholungen:</string>
     <string name="snooze_duration">Schlummerdauer:</string>
     <string name="no_snoozes">Kein Schlummern</string>
     <string name="gentle_guitar">Sanfte Gitarre</string>
@@ -71,7 +71,7 @@
     <string name="camera_permission_required">Kameraerlaubnis erforderlich</string>
     <string name="camera_permission_required_description">Zum Scannen von Codes ist eine Kameraberechtigung erforderlich. Um die Berechtigung zu erteilen, gehen Sie zu den Einstellungen und erteilen Sie die Kameraberechtigung manuell.</string>
     <string name="settings">Einstellungen</string>
-    <string name="cancel">Stornieren</string>
+    <string name="cancel">Abbrechen</string>
     <string name="code_successfully_assigned">Code wurde erfolgreich zugewiesen!</string>
     <string name="assign_new_code">Neuen Code zuweisen</string>
     <string name="clear_assigned_code">Zugewiesenen Code löschen</string>
@@ -141,9 +141,9 @@
     <string name="get_it_now">Hol es dir jetzt!</string>
     <string name="not_now">Nicht jetzt</string>
     <string name="special_settings">Spezielle Einstellungen</string>
-    <string name="do_not_leave_alarm">Lassen Sie keinen Alarm</string>
+    <string name="do_not_leave_alarm">Verlassen Sie nicht den Alarm</string>
     <string name="do_not_leave_alarm_description">Zeigt weiterhin den Alarmbildschirm an, wenn der Alarm klingelt.</string>
-    <string name="block_volume_down">Lautstärke verringern</string>
+    <string name="block_volume_down">Lautstärke verringern blockieren</string>
     <string name="block_volume_down_description">Die Lautstärke des Alarmklingeltons darf nicht verringert werden.</string>
     <string name="alarm_didnt_ring">Wecker hat nicht geklingelt? ⏰</string>
     <string name="alarm_didnt_ring_description">Wurde der letzte Alarm verpasst? Wenn ja, stellen Sie sicher, dass Sie unseren Optimierungsleitfaden genau befolgt haben. Dieser soll sicherstellen, dass QRAlarm auf Ihrem System optimal funktioniert!</string>
@@ -151,19 +151,19 @@
     <string name="there_was_an_issue_playing_ringtone">Beim Abspielen des Klingeltons ist ein Problem aufgetreten…</string>
     <string name="skip_next_alarm">Nächsten Alarm überspringen</string>
     <string name="undo_skipping_next_alarm">Überspringen des nächsten Alarms rückgängig machen</string>
-    <string name="next_alarm_date">Nächste: %1$s</string>
+    <string name="next_alarm_date">Nächster: %1$s</string>
     <string name="alarm_label">Alarmbezeichnung</string>
     <string name="enter_your_alarm_label">Alarmbezeichnung eingeben…</string>
     <string name="open_code_link">Code-Link öffnen</string>
     <string name="open_code_link_description">Wenn der Code eine gültige URL enthält, öffnet die App diese beim Scannen automatisch.</string>
     <string name="do_you_enjoy_qralarm">Gefällt Ihnen QRAlarm? 🚀 ⏰</string>
     <string name="im_working_hard">Ich arbeite hart daran, Ihren Morgen so reibungslos wie möglich zu gestalten! 🙂</string>
-    <string name="i_love_it_rate_me">Ich liebe es – bewerte mich! ❤️</string>
+    <string name="i_love_it_rate_me">Ich liebe es – bewerte die App! ❤️</string>
     <string name="did_something_go_wrong">Ist etwas schief gelaufen?\nGemeinsam können wir das Problem beheben!</string>
     <string name="tell_me_what_is_wrong">Sag mir, was los ist</string>
     <string name="do_not_show_again">Diesen Bildschirm nicht mehr anzeigen.</string>
     <string name="rate_qralarm">Bewerten Sie QRAlarm</string>
-    <string name="previous">Vorherige</string>
+    <string name="previous">Zurück</string>
     <string name="scan_code">Code scannen</string>
     <string name="or_use_already_used_code">Oder verwenden Sie bereits verwendeten Code</string>
     <string name="click_to_choose">*Zum Auswählen anklicken*</string>
