Closes #62; Alarms can now be copied on the HomeScreen

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -175,4 +175,5 @@
     <string name="using_system_alarm_volume">Verwendung der Systemalarmlautstärke</string>
     <string name="advanced_settings">Erweiterte Einstellungen</string>
     <string name="incorrect_code_scanned">Falscher Code gescannt!</string>
+    <string name="copy_alarm">Alarm kopieren</string>
 </resources>
