--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -181,4 +181,5 @@
     <string name="using_system_alarm_volume">Utilisation du volume d\'alarme du système</string>
     <string name="advanced_settings">Paramètres avancés</string>
     <string name="incorrect_code_scanned">Code erroné scanné !</string>
+    <string name="copy_alarm">Copier l\'alarme</string>
 </resources>
