--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -187,4 +187,5 @@
     <string name="using_system_alarm_volume">Korzystanie z głośności alarmu systemowego</string>
     <string name="advanced_settings">Ustawienia zaawansowane</string>
     <string name="incorrect_code_scanned">Zeskanowano nieprawidłowy kod!</string>
+    <string name="copy_alarm">Skopiuj alarm</string>
 </resources>
