--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -182,4 +182,5 @@
     <string name="using_system_alarm_volume">Sistem alarm ses seviyesi kullanılıyor</string>
     <string name="advanced_settings">Gelişmiş ayarlar</string>
     <string name="incorrect_code_scanned">Yanlış kod tarandı!</string>
+    <string name="copy_alarm">Kopya alarmı</string>
 </resources>
