Added the option of choosing alarm time with the dialer time picker

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -179,6 +179,7 @@
     <string name="power_off_guard_description">No te permitas apagar el teléfono cuando suene la alarma.</string>
     <string name="lock_alarm_to_this_volume">Ajuste la alarma a este volumen cuando suene:</string>
     <string name="using_system_alarm_volume">Uso del volumen de alarma del sistema</string>
+    <string name="ok">OK</string>
     <string name="advanced_settings">Configuración avanzada</string>
     <string name="incorrect_code_scanned">¡Código incorrecto escaneado!</string>
     <string name="copy_alarm">Copiar alarma</string>
