--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -179,6 +179,7 @@
     <string name="power_off_guard_description">Ne vous laissez pas aller à éteindre votre téléphone lorsque l\'alarme sonne.</string>
     <string name="lock_alarm_to_this_volume">Réglez l\'alarme sur ce volume lorsqu\'elle sonne :</string>
     <string name="using_system_alarm_volume">Utilisation du volume d\'alarme du système</string>
+    <string name="ok">OK</string>
     <string name="advanced_settings">Paramètres avancés</string>
     <string name="incorrect_code_scanned">Code erroné scanné !</string>
     <string name="copy_alarm">Copier l\'alarme</string>
