--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -179,6 +179,7 @@
     <string name="power_off_guard_description">Non lasciatevi spegnere il telefono quando suona la sveglia.</string>
     <string name="lock_alarm_to_this_volume">Impostare la sveglia su questo volume quando suona:</string>
     <string name="using_system_alarm_volume">Utilizzo del volume degli allarmi di sistema</string>
+    <string name="ok">OK</string>
     <string name="advanced_settings">Impostazioni avanzate</string>
     <string name="incorrect_code_scanned">Codice errato scansionato!</string>
     <string name="copy_alarm">Copia allarme</string>
