--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -173,6 +173,7 @@
     <string name="power_off_guard_description">Schalten Sie Ihr Telefon nicht aus, wenn der Wecker klingelt.</string>
     <string name="lock_alarm_to_this_volume">Stellen Sie den Alarm auf diese Lautstärke ein, wenn er klingelt:</string>
     <string name="using_system_alarm_volume">Verwendung der Systemalarmlautstärke</string>
+    <string name="ok">OK</string>
     <string name="advanced_settings">Erweiterte Einstellungen</string>
     <string name="incorrect_code_scanned">Falscher Code gescannt!</string>
     <string name="copy_alarm">Alarm kopieren</string>
