--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -185,6 +185,7 @@
     <string name="power_off_guard_description">Не дозвольте собі вимкнути телефон, коли лунає будильник.</string>
     <string name="lock_alarm_to_this_volume">Налаштуйте гучність будильника, коли він лунає:</string>
     <string name="using_system_alarm_volume">Використання гучності сигналу будильника</string>
+    <string name="ok">OK</string>
     <string name="advanced_settings">Розширені налаштування</string>
     <string name="incorrect_code_scanned">Відскановано невірний код!</string>
     <string name="copy_alarm">Тривога копіювання</string>
