--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -167,6 +167,7 @@
     <string name="power_off_guard_description">当闹钟响起时，不要让自己关掉手机。</string>
     <string name="lock_alarm_to_this_volume">设置闹钟响起时的音量：</string>
     <string name="using_system_alarm_volume">当前使用系统闹钟音量</string>
+    <string name="ok">好的</string>
     <string name="advanced_settings">高级设置</string>
     <string name="incorrect_code_scanned">扫描的代码不正确！</string>
     <string name="copy_alarm">复制此闹钟</string>
